k8s/base/deployment-db.yaml
---
# Source: mongodb/templates/deployment-standalone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-9-db
  labels:
    app: go-demo-9-db
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: go-demo-9-db
  template:
    metadata:
      labels:
        app: go-demo-9-db
    spec:
      securityContext:
        fsGroup: 1001      
      containers:
      - name: go-demo-9-db
        image: docker.io/bitnami/mongodb:4.2.2-debian-10-r0
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        ports:
        - name: mongodb
          containerPort: 27017
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        volumeMounts:
        - name: data
          mountPath: /bitnami/mongodb
          subPath: 
        resources:
          {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: go-demo-9-db
