k8s/base/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-9
  labels:
    app: go-demo-9
spec:
  selector:
    matchLabels:
      app: go-demo-9
  template:
    metadata:
      labels:
        app: go-demo-9
    spec:
      containers:
      - name: go-demo-9
        image: go-demo-9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 50m
            memory: 20Mi
