k8s/base/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: go-demo-9
  labels:
    app: go-demo-9
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-demo-9
